<resources>
    <string name="app_name">Taskmaster</string>
    <string name="progress_graph_button">progress_graph_button</string>
    <string name="planner_button">planner_button</string>
    <string name="zoom_out_button">zoom_out_button</string>
    <string name="preferences">preferences</string>
    <string name="show_completed">show completed</string>
    <string name="expand_button">expand button</string>
    <string name="add_button">add button</string>
    <string name="tabs">tabs</string>
    <string name="task">task</string>
    <string name="tag">tag</string>
    <string name="period">period</string>
    <string name="page">Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_name">Tag name</string>
    <string name="input">input</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="no_date_n_chosen">No date\nchosen</string>
    <string name="choose_expiration_date">Choose expiration date</string>
    <string name="choose_notify_time">Choose notify time</string>
    <string name="no_time_chosen">No time\nchosen</string>
    <string name="choose_tags">Choose tags:</string>
</resources>