<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/zoom_out_button"
        android:title="@string/zoom_out_button"
        app:showAsAction="always"
        android:icon="@drawable/expand"
        android:iconTint="@color/material_dynamic_neutral100"
        />
    <item
        android:id="@+id/progress_graph_button"
        android:title="@string/progress_graph_button"
        app:showAsAction="always"
        android:icon="@drawable/graph_1"
        android:iconTint="@color/material_dynamic_neutral100"
        />
    <item
        android:id="@+id/planner_button"
        android:title="@string/planner_button"
        app:showAsAction="always"
        android:icon="@drawable/calendar"
        android:iconTint="@color/material_dynamic_neutral100"
        />
    <item
        android:id="@+id/preferences_button"
        android:title="@string/preferences"
        android:tooltipText="preferences"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/show_completed_togle"
        android:title="@string/show_completed"
        android:tooltipText="show_completed_togle"
        app:showAsAction="never"
        />

</menu>